## Makefile.am -- Process this file with automake to produce Makefile.in
AM_CPPFLAGS=-I include/
bin_PROGRAMS = customer
customer_SOURCES = src/main.c src/customer.c src/node_entry.c src/node_string.c

dist_pkgdata_DATA = bootstrap.sh configure.ac credentials.txt Doxyfile Makefile.am README.md docs/
